Fixed header background on mobile.sass and removed commented out code.

--- a/views/mobile.sass
+++ b/views/mobile.sass
@@ -119,7 +119,7 @@ body.home
     color = #fefefe
     text-align: left
     font-size: 200%
-    background: url(/img/highway.png) no-repeat 30% 50%
+    background: url(/img/head.png) no-repeat 30% 50%
     height: 5em
     line-height: 1
     overflow: hidden
@@ -152,7 +152,7 @@ div.breadcrumb
 div.breadcrumb
   margin: 0
   padding: 0
-  background: url(/img/highway.png) no-repeat bottom center
+  background: url(/img/head.png) no-repeat bottom center
 
   p
     margin: 0
